Incorporated useEffect to update the weekly temperature values. Removed the current location button. Realigned the weekday background border. Corrected the container height.

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -4,7 +4,7 @@
   border-radius: 10px;
   border-width: 8px;
   font-family: "Saira", sans-serif;
-  height: 660px;
+  height: 640px;
   margin: 0 auto;
   --bs-gutter-x: 0;
 }
