--- a/src/style/Week.css
+++ b/src/style/Week.css
@@ -5,6 +5,7 @@
     margin-bottom: 20px;
     position: relative;
     bottom: 50px;
+    right: 40px;
   }
   .weeklyForecastBackground {
     background: #d9edfd;
@@ -13,25 +14,27 @@
     border-radius: 10px;
     border-width: 5px;
     height: 50px;
-    margin: 0px 5px;
+    margin: 0px 40px;
+   
   }
   .weekDay,
   .weeklyTemperature {
-    margin: 0 auto;
     padding: 10px 10px;
     text-align: center;
     position: relative;
     bottom: 100px;
   }
+  .weeklyTemperature{
+    position: relative;
+    left: -45px;
+    bottom: 25px;
+  }
   .weekDay {
     color: #006ec5;
     font-weight: bold;
-    text-align: center;
-  }
-  .weeklyForecastBackground,
-  .weekDay {
     position: relative;
-    bottom: 40px;
+    bottom: 45px;
+    left: 10px;
     max-width: 95%;
   }
   .forecastIcons {
@@ -40,19 +43,19 @@
     border-radius: 100px;
     border-width: 5px;
     position: relative;
-    margin: 0 auto;
     bottom: 30px;
     max-width: 9%;
-    padding: 20px 5px 5px 17px;
+    padding: 10px 42px;
+  }
+  .forecastIcons canvas {
+    position: relative;
+    right: 20px;
   }
   .weeklyForecast {
     margin-left: 65px;
     max-width: 90%;
   }
-  .weeklyTemperature {
-    position: relative;
-    bottom: 25px;
-  }
+  
   .maxTemp {
     color: #5a758e;
     font-size: 18px;
